--- a/about2.html
+++ b/about2.html
@@ -25,7 +25,7 @@
             <div class="us">
                 <h4>ABOUT US</h4>
                 <h2>We Provide Best Tour Packages In Your Budget</h2>
-                <p>The best services ever are available to you from Adventour. <br> We make sure you receive top-notch services. Fun for you and your loved ones is what we deliver. <br> Make you forget all your issues and feel incredibly calm</p>
+                <p>The best services ever are available to you from <i>Traveller.</i><br> We make sure you receive top-notch services. Fun for you and your loved ones is what we deliver. <br> Make you forget all your issues and feel incredibly calm</p>
                 <div id="a-img">
 
                     <img src="images/about-1.jpg" alt="">
