--- a/about2.html
+++ b/about2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Traveller-About us page</title>
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
@@ -18,8 +19,11 @@
 
 
         </section>
-
+        <div id="back">
+            <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
+        </div>
         <div class="abt_img">
+
             <img src="images/about.jpg" alt="">
 
             <div class="us">
