--- a/contact2.html
+++ b/contact2.html
@@ -12,6 +12,9 @@
 </head>
 
 <body style="background-color: #999999;">
+    <div id="back">
+        <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
+    </div>
     <div class="cont">
         <h1>CONTACT</h1>
         <h4 style="color: #80aaff;padding-top: 4%;">Contact us</h4>
@@ -25,19 +28,19 @@
         <div class="icons">
 
             <div class="reachus">
-                <h4 style="font-size: 30px; color: #994d00;"><i class="fa fa-map-marker" aria-hidden="true"></i></h4>
+                <h4><i class="fa fa-map-marker" aria-hidden="true"></i></h4>
                 <h3 style="color: #80aaff;">Address</h3>
                 <p>123 Street, Nakuru, Kenya</p>
             </div>
 
             <div class="reachus">
-                <h4 style="font-size: 30px;color: #994d00;"><i class="fa fa-phone" aria-hidden="true"></i></h4>
+                <h4><i class="fa fa-phone" aria-hidden="true"></i></h4>
                 <h3 style="color: #80aaff;">Phone</h3>
                 <p>0700630063</p>
             </div>
 
             <div class="reachus">
-                <h4 style="font-size: 30px; color: #994d00;"><i class="fa fa-envelope" aria-hidden="true"></i></h4>
+                <h4><i class="fa fa-envelope" aria-hidden="true"></i></h4>
                 <h3 style="color: #80aaff;">Email</h3>
                 <p>travellers@gmail.com</p>
             </div>
