--- a/information2.html
+++ b/information2.html
@@ -11,6 +11,9 @@
 </head>
 
 <body style=" background: linear-gradient(to top left, #ff00ff 0%, #00ffff 100%);">
+    <div id="back">
+        <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
+    </div>
     <div>
         <div class="service">
             <h1>Our Services</h1>
