--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -12,7 +13,11 @@
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
     <title>Traveller</title>
 
-
+    <style>
+        .mySlides {
+            display: none;
+        }
+    </style>
 </head>
 
 <body style="background-color: #f2f2f2;">
@@ -36,15 +41,56 @@
 
         </div>
 
+        <!--------------------------------slide show------------------------------------------------->
+        <div class="w3-content w3-display-container">
 
+            <div class="w3-display-container mySlides">
+                <img src="images/d1.jpg" style="width:100%; height: 450px;">
+                <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
+                    Boat-riding
+                </div>
+            </div>
 
-        <!------------------Slider Down Here--------------->
+            <div class="w3-display-container mySlides">
+                <img src="images/greece.jpg" style="width:100%;  height: 450px;">
+                <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
+                    Beach View
+                </div>
+            </div>
 
-        <!-------Slide show----->
-        <!-- Carousel -->
+            <div class="w3-display-container mySlides">
+                <img src="images/d3.jpg" style="width:100%;  height: 450px;">
+                <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
+                    Beautiful Hills
+                </div>
+            </div>
+
+            <div class="w3-display-container mySlides">
+                <img src="images/s1.jpg" style="width:100%;  height: 450px;">
+                <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
+                    Boat Racing
+                </div>
+            </div>
+
+            <div class="w3-display-container mySlides">
+                <img src="images/gaz.jpg" style="width:100%;  height: 450px;">
+                <div class="w3-display-bottommiddle w3-large w3-container w3-padding-16  w3-black">
+                    Beautiful Flora and Fauna
+                </div>
+            </div>
+
+            <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
+            <button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+
+        </div>
+
+        <!------------------Slider Down Here---------------
+
+        -------Slide show-----
+        -- Carousel --
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-            <!-- Indicators/dots -->
+            -- Indicators/dots --
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
@@ -52,7 +98,7 @@
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
             </div>
 
-            <!-- The slideshow/carousel -->
+            -- The slideshow/carousel --
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="images/d1.jpg" alt="d1" class="d-block " style="width: 100%; height: 500px;">
@@ -86,14 +132,14 @@
             </div>
 
 
-            <!-- Left and right controls/icons -->
+            -- Left and right controls/icons --
             <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </button>
             <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
         <span class="carousel-control-next-icon"></span>
       </button>
-        </div>
+        </div>-------->
 
 
         <!--------------------ARTICLES-------------------------->
@@ -256,6 +302,41 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+    <script>
+        var slideIndex = 1;
+        showDivs(slideIndex);
+
+        function plusDivs(n) {
+            showDivs(slideIndex += n);
+        }
+
+        function showDivs(n) {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            if (n > x.length) {
+                slideIndex = 1
+            }
+            if (n < 1) {
+                slideIndex = x.length
+            }
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            x[slideIndex - 1].style.display = "block";
+        }
+    </script>
 
 </body>
 
