modified my copyright

--- a/about2.html
+++ b/about2.html
@@ -53,6 +53,10 @@
 
 
     </div>
+    <div class="copyright">
+        <hr>
+        <p>Copyright&copy2023 EmejenDev.Traveller,.LTD. All Rights Reserved</p>
+    </div>
 
 
 
