--- a/contact2.html
+++ b/contact2.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
 </head>
 
-<body style="background-color: #999999;">
+<body style="background-color:  #f2f2f2;">
     <div id="back">
         <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
     </div>
@@ -52,6 +52,10 @@
 
 
 
+    </div>
+    <div class="copyright">
+        <hr>
+        <p>Copyright&copy2023 EmejenDev.Traveller,.LTD. All Rights Reserved</p>
     </div>
 </body>
 
