--- a/information2.html
+++ b/information2.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
 </head>
 
-<body style=" background: linear-gradient(to top left, #ff00ff 0%, #00ffff 100%);">
+<body style="background-color:  #f2f2f2; ">
     <div id="back">
         <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
     </div>
@@ -69,6 +69,10 @@
 
         </div>
 
+    </div>
+    <div class="copyright">
+        <hr>
+        <p>Copyright&copy2023 EmejenDev.Traveller,.LTD. All Rights Reserved</p>
     </div>
 
 </body>
