--- a/index.html
+++ b/index.html
@@ -84,62 +84,6 @@
 
         </div>
 
-        <!------------------Slider Down Here---------------
-
-        -------Slide show-----
-        -- Carousel --
-        <div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-            -- Indicators/dots --
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
-            </div>
-
-            -- The slideshow/carousel --
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/d1.jpg" alt="d1" class="d-block " style="width: 100%; height: 500px;">
-                    <div class="carousel-caption">
-                        <h4 style="color: #0c0107;">Let's Tour Together <i style="color: #0066ff;" class="fa fa-smile-o" aria-hidden="true"></i></h4>
-
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="images/greece.jpg" alt="d2" class="d-block " style="width: 100%; height: 500px;">
-                    <div class="carousel-caption">
-                        <h4 style="color: #0c0107;">Let's Tour Together <i style="color: #0066ff;" class="fa fa-smile-o" aria-hidden="true"></i></h4>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="images/d3.jpg" alt="d3" class="d-block " style="width: 100%; height: 500px;">
-                    <div class="carousel-caption">
-                        <h4 style="color: #0c0107;">Let's Tour Together <i style="color: #0066ff;" class="fa fa-smile-o" aria-hidden="true"></i></h4>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="images/s1.jpg" alt="d4" class="d-block " style="width: 100%; height: 500px;">
-                    <div class="carousel-caption">
-                        <h4 style="color: #0c0107;">Let's Tour Together <i style="color: hsl(295, 86%, 51%);" class="fa fa-smile-o" aria-hidden="true"></i></h4>
-                    </div>
-                </div>
-
-            </div>
-
-
-            -- Left and right controls/icons --
-            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
-        </div>-------->
 
 
         <!--------------------ARTICLES-------------------------->
@@ -297,7 +241,7 @@
 
     <div class="copyright">
         <hr>
-        <p>Copyright&copy2023 KajenSolutions,.LTD. All Rights Reserved</p>
+        <p>Copyright&copy2023 EmejenDev.Traveller,.LTD. All Rights Reserved</p>
     </div>
 
 
