--- a/about2.html
+++ b/about2.html
@@ -53,10 +53,40 @@
 
 
     </div>
-    <div class="copyright">
-        <hr>
-        <p>Copyright&copy2023 EmejenDev.Traveller,.LTD. All Rights Reserved</p>
-    </div>
+    <!----------------------footer------------------------------------->
+    <section class="footer">
+        <div id="container">
+            <div id="mission-vision">
+                <div class="mission">
+                    <h4>MISSION</h4>
+                    <P>To become your all time travel Master.</P>
+                </div>
+                <div class="vision">
+                    <h4>VISION</h4>
+                    <p>To provide quality services to our esteemed customers across the world.</p>
+                </div>
+
+            </div>
+            <div class="social-pages">
+                <h5>Visit Us Through The Following Pages</h5>
+                <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
+                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>  Instagram</a>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>  Twitter</a>
+                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>  LinkedIn</a>
+
+            </div>
+
+
+        </div>
+        <div class="copyright">
+            <hr>
+            <p>Copyright&copy2023@EmejenDev.Traveller,.LTD. All Rights Reserved</p>
+        </div>
+
+
+    </section>
+
+
 
 
 
