--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 
-<body style="background-color: #f2f2f2;">
+<body style="background-color: #bfbfbf;">
     <section>
 
         <div class="topbar">
@@ -87,162 +87,192 @@
 
 
         <!--------------------ARTICLES-------------------------->
-        <div class="boxed-articles">
+        <section class="arti-siderpage">
+            <div class="boxed-articles">
 
-            <div class="art">
-                <!----------Article for the bird----------------->
-                <div class="article">
-                    <img src="images/a1.jpg" alt="">
-                    <p>Discover Amazing places of the world with us</p>
+                <div class="art">
+                    <!----------Article for the bird----------------->
+                    <div class="article">
+                        <img src="images/a1.jpg" alt="">
+                        <p>Discover Amazing places of the world with us</p>
+
+                    </div>
+
+
+                    <div class="article">
+                        <img src="images/a2.jpg" alt="">
+                        <p>Do you know what boat racing is? It's not a tale anymore with us. We make fantasies a reality.</p>
+
+                    </div>
+
 
                 </div>
+                <div class="art2" style="margin-top: 3%;">
+                    <div class="article">
+                        <img src="images/a3.jpg" alt="">
+                        <p>Enjoy travels with your loved ones, whether they are family, friends, or both. Have a good time together and make memories. Fun is what life is all about for us.</p>
 
 
-                <div class="article">
-                    <img src="images/a2.jpg" alt="">
-                    <p>Do you know what boat racing is? It's not a tale anymore with us. We make fantasies a reality.</p>
 
+                    </div>
+                    <div class="article">
+                        <img src="images/a4.jpg" alt="">
+                        <p>One of the best refreshments you can have with us is water skating.</p>
+                    </div>
                 </div>
-
 
             </div>
-            <div class="art2" style="margin-top: 3%;">
-                <div class="article">
-                    <img src="images/a3.jpg" alt="">
-                    <p>Enjoy travels with your loved ones, whether they are family, friends, or both. Have a good time together and make memories. Fun is what life is all about for us.</p>
 
 
+
+
+            <!------------CALENDAR---------------------------------------------------------------->
+            <div class="calender-booking">
+
+
+
+                <div class="calender">
+
+                    <h4 style="color: #00e6b8;  text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">MARCH 2023</h4>
+                    <table class="table" border="1" style="background-color: #3d3d5c; color: aliceblue;" cellpadding="3">
+
+                        <tr>
+                            <th>Sun</th>
+                            <th>Mon</th>
+                            <th>Tue</th>
+                            <th>Wed</th>
+                            <th>Thur</th>
+                            <th>Fri</th>
+                            <th>Sat</th>
+                        </tr>
+
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>6</td>
+                            <td style="background-color:  #1aff1a; width: 6px; height: 7px; border-radius: 50%;">7</td>
+                            <td>8</td>
+                            <td>9</td>
+                            <td>10</td>
+                            <td>11</td>
+                        </tr>
+
+                        <tr>
+                            <td>12</td>
+                            <td>13</td>
+                            <td>14</td>
+                            <td>15</td>
+                            <td>16</td>
+                            <td>17</td>
+                            <td>18</td>
+                        </tr>
+
+                        <tr>
+                            <td>19</td>
+                            <td>20</td>
+                            <td>21</td>
+                            <td>22</td>
+                            <td>23</td>
+                            <td>24</td>
+                            <td>25</td>
+                        </tr>
+                        <tr>
+                            <td>26</td>
+                            <td>27</td>
+                            <td>28</td>
+                            <td>29</td>
+                            <td>30</td>
+                            <td>31</td>
+                            <td></td>
+                        </tr>
+
+
+                    </table>
 
                 </div>
-                <div class="article">
-                    <img src="images/a4.jpg" alt="">
-                    <p>One of the best refreshments you can have with us is water skating.</p>
+
+
+
+
+                <!---------------------Bookings---------------------------------------------------------------------->
+                <div class="booking">
+
+                    <h4>Tours & Travel Services</h4>
+                    <div class="guide">
+                        <h2><i class="fa fa-road" aria-hidden="true"></i></h2>
+                        <div style="padding-left: 30px;">
+                            <h5>Tour Guide</h5>
+                            <a style="text-decoration: none;" href="#">Book Now</a>
+                        </div>
+
+
+                    </div>
+                    <div class="ticket">
+                        <h2><i class="fa fa-ticket" aria-hidden="true"></i></h2>
+                        <div style="padding-left: 30px;">
+                            <h5>Ticket Booking</h5>
+                            <a style="text-decoration: none;" href="#">Book Now</a>
+                        </div>
+
+                    </div>
+
+                    <div class="hotel">
+                        <h2><i class="fa fa-cutlery" aria-hidden="true"></i></h2>
+                        <div style="padding-left: 35px;">
+                            <h5>Hotel Booking</h5>
+                            <a style="text-decoration: none;" href="#">Book Now</a>
+                        </div>
+
+                    </div>
+
                 </div>
+
             </div>
+        </section>
+
+    </section>
+
+    <!----------------------footer------------------------------------->
+    <section class="footer">
+        <div id="container">
+            <div id="mission-vision">
+                <div class="mission">
+                    <h4>MISSION</h4>
+                    <P>To become your all time travel Master.</P>
+                </div>
+                <div class="vision">
+                    <h4>VISION</h4>
+                    <p>To provide quality services to our esteemed customers across the world.</p>
+                </div>
+
+            </div>
+            <div class="social-pages">
+                <h5>Visit Us Through The Following Pages</h5>
+                <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
+                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>  Instagram</a>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>  Twitter</a>
+                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>  LinkedIn</a>
+
+            </div>
+
 
         </div>
-
-
-
-
-        <!------------CALENDAR-------->
-
-        <div class="boxed-article2">
-
-
-            <div class="calender">
-
-                <h4 style="color: #00e6b8;  text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">MARCH 2023</h4>
-                <table class="table" border="1" style="background-color: #3d3d5c; color: aliceblue;" cellpadding="3">
-
-                    <tr>
-                        <th>Sun</th>
-                        <th>Mon</th>
-                        <th>Tue</th>
-                        <th>Wed</th>
-                        <th>Thur</th>
-                        <th>Fri</th>
-                        <th>Sat</th>
-                    </tr>
-
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>4</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>6</td>
-                        <td style="background-color:  #1aff1a; width: 6px; height: 7px; border-radius: 50%;">7</td>
-                        <td>8</td>
-                        <td>9</td>
-                        <td>10</td>
-                        <td>11</td>
-                    </tr>
-
-                    <tr>
-                        <td>12</td>
-                        <td>13</td>
-                        <td>14</td>
-                        <td>15</td>
-                        <td>16</td>
-                        <td>17</td>
-                        <td>18</td>
-                    </tr>
-
-                    <tr>
-                        <td>19</td>
-                        <td>20</td>
-                        <td>21</td>
-                        <td>22</td>
-                        <td>23</td>
-                        <td>24</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <td>26</td>
-                        <td>27</td>
-                        <td>28</td>
-                        <td>29</td>
-                        <td>30</td>
-                        <td>31</td>
-                        <td></td>
-                    </tr>
-
-
-                </table>
-
-            </div>
-
-
-
+        <div class="copyright">
+            <hr>
+            <p>Copyright&copy2023@EmejenDev.Traveller,.LTD. All Rights Reserved</p>
         </div>
-        <!---------------------Bookings--------------------->
-        <div class="booking">
-
-            <h4>Tours & Travel Services</h4>
-            <div class="guide">
-                <h2><i class="fa fa-road" aria-hidden="true"></i></h2>
-                <div style="padding-left: 30px;">
-                    <h5>Tour Guide</h5>
-                    <a style="text-decoration: none;" href="#">Book Now</a>
-                </div>
-
-
-            </div>
-            <div class="ticket">
-                <h2><i class="fa fa-ticket" aria-hidden="true"></i></h2>
-                <div style="padding-left: 30px;">
-                    <h5>Ticket Booking</h5>
-                    <a style="text-decoration: none;" href="#">Book Now</a>
-                </div>
-
-            </div>
-
-            <div class="hotel">
-                <h2><i class="fa fa-cutlery" aria-hidden="true"></i></h2>
-                <div style="padding-left: 35px;">
-                    <h5>Hotel Booking</h5>
-                    <a style="text-decoration: none;" href="#">Book Now</a>
-                </div>
-
-            </div>
-
-        </div>
-
-
 
 
     </section>
 
-    <div class="copyright">
-        <hr>
-        <p>Copyright&copy2023 EmejenDev.Traveller,.LTD. All Rights Reserved</p>
-    </div>
 
 
 
