--- a/contact2.html
+++ b/contact2.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
 </head>
 
-<body style="background-color:  #f2f2f2;">
+<body style="background-color:  #bfbfbf;">
     <div id="back">
         <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
     </div>
@@ -53,6 +53,29 @@
 
 
     </div>
+    <!-------------------contact form-------------------------->
+    <div class="send-details">
+        <h4>Contact For Any Query</h4>
+        <div id="form">
+
+            <form action="" class="form-grp">
+
+
+                <input type="text" placeholder="Your Name"> <br>
+                <input type="email" placeholder="Enter Your Email" required> <br>
+                <input type="text" placeholder="Subject"><br>
+                <textarea name="text" id="text" placeholder="Message" cols="30" rows="10"></textarea><br>
+                <input type="submit" name="submit" value="Send" class="submit" style="background-color: #994d00; width: 5em; padding-top: 2em; margin-left: 10em;"></input>
+
+
+
+
+            </form>
+
+        </div>
+    </div>
+
+
     <!----------------------footer------------------------------------->
     <section class="footer">
         <div id="container">
@@ -76,8 +99,8 @@
 
             </div>
 
-
         </div>
+
         <div class="copyright">
             <hr>
             <p>Copyright&copy2023@EmejenDev.Traveller,.LTD. All Rights Reserved</p>
