--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <ul>
 
-                <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                <li><a href="#" style="color: aliceblue;"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
                 <li><a href="about2.html">About</a></li>
                 <li><a href="information2.html"><i class="fa fa-question-circle" aria-hidden="true"></i>Info</a></li>
                 <li><a href="contact2.html"><i class="fa fa-phone-square" aria-hidden="true"></i>Contact Us</a></li>
@@ -239,6 +239,127 @@
         </section>
 
     </section>
+    <!----------------------Packages------------------------------------>
+    <section class="packages">
+        <h3>Our Tour Packages</h3>
+        <div id="places">
+            <!----------------------first------------------------->
+            <div id="first">
+                <img src="images/package-1.jpg" alt="">
+                <div id="location">
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>Thailand</p>
+                    <p><i class="fa fa-calendar" aria-hidden="true"></i>4 days</p>
+                    <p><i class="fa fa-user" aria-hidden="true"></i>2 Persons</p>
+                </div>
+                <h5>Discover so many amazing places with US &#128525;</h5>
+                <hr>
+                <div id="stared-cost">
+                    <h6><i class="fa fa-star" aria-hidden="true"></i>3.5<span>(177)</span></h6>
+                    <h6><i class="fa fa-usd" aria-hidden="true"></i>115</h6>
+
+                </div>
+
+            </div>
+            <!----------------------second------------------------->
+            <div id="first">
+                <img src="images/blog-2.jpg" alt="">
+                <div id="location">
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>United States</p>
+                    <p><i class="fa fa-calendar" aria-hidden="true"></i>4 days</p>
+                    <p><i class="fa fa-user" aria-hidden="true"></i>1 Persons</p>
+                </div>
+                <h5>Discover so many amazing places with US &#128525;</h5>
+                <hr>
+                <div id="stared-cost">
+                    <h6><i class="fa fa-star" aria-hidden="true"></i>4.5<span>(78)</span></h6>
+                    <h6><i class="fa fa-usd" aria-hidden="true"></i>182</h6>
+
+                </div>
+
+
+
+            </div>
+            <!----------------------third------------------------->
+            <div id="first">
+                <img src="images/package-3.jpg" alt="">
+                <div id="location">
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>Austrailia</p>
+                    <p><i class="fa fa-calendar" aria-hidden="true"></i>4 days</p>
+                    <p><i class="fa fa-user" aria-hidden="true"></i>2 Persons</p>
+                </div>
+                <h5>Discover so many amazing places with US &#128525;</h5>
+                <hr>
+                <div id="stared-cost">
+                    <h6><i class="fa fa-star" aria-hidden="true"></i>5.5<span>(602)</span></h6>
+                    <h6><i class="fa fa-usd" aria-hidden="true"></i>415</h6>
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+        <div id="places2">
+            <!----------------------fouth------------------------->
+            <div id="first">
+                <img src="images/a3.jpg" alt="">
+                <div id="location">
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>United Kingdom</p>
+                    <p><i class="fa fa-calendar" aria-hidden="true"></i>4 days</p>
+                    <p><i class="fa fa-user" aria-hidden="true"></i>6 Persons</p>
+                </div>
+                <h5>Discover so many amazing places with US &#128525;</h5>
+                <hr>
+                <div id="stared-cost">
+                    <h6><i class="fa fa-star" aria-hidden="true"></i>4.8<span>(270)</span></h6>
+                    <h6><i class="fa fa-usd" aria-hidden="true"></i>215</h6>
+
+                </div>
+
+
+            </div>
+            <!----------------------fifth------------------------->
+            <div id="first">
+                <img src="images/a4.jpg" alt="">
+                <div id="location">
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>Indonesia</p>
+                    <p><i class="fa fa-calendar" aria-hidden="true"></i>4 days</p>
+                    <p><i class="fa fa-user" aria-hidden="true"></i>2 Persons</p>
+                </div>
+                <h5>Discover so many amazing places with US &#128525;</h5>
+                <hr>
+                <div id="stared-cost">
+                    <h6><i class="fa fa-star" aria-hidden="true"></i>4.5<span>(702)</span></h6>
+                    <h6><i class="fa fa-usd" aria-hidden="true"></i>115</h6>
+
+                </div>
+
+
+            </div>
+            <!----------------------sixth------------------------->
+            <div id="first">
+                <img src="images/destination-6.jpg" alt="">
+                <div id="location">
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>South Africa</p>
+                    <p><i class="fa fa-calendar" aria-hidden="true"></i>4 days</p>
+                    <p><i class="fa fa-user" aria-hidden="true"></i>1 Persons</p>
+                </div>
+                <h5>Discover so many amazing places with US &#128525;</h5>
+                <hr>
+                <div id="stared-cost">
+                    <h6><i class="fa fa-star" aria-hidden="true"></i>5.0<span>(1102)</span></h6>
+                    <h6><i class="fa fa-usd" aria-hidden="true"></i>815</h6>
+
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </section>
+
 
     <!----------------------footer------------------------------------->
     <section class="footer">
@@ -263,8 +384,8 @@
 
             </div>
 
-
         </div>
+
         <div class="copyright">
             <hr>
             <p>Copyright&copy2023@EmejenDev.Traveller,.LTD. All Rights Reserved</p>
@@ -272,6 +393,7 @@
 
 
     </section>
+
 
 
 
