--- a/information2.html
+++ b/information2.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
 </head>
 
-<body style="background-color:  #f2f2f2; ">
+<body style="background-color:  #bfbfbf; ">
     <div id="back">
         <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
     </div>
@@ -70,6 +70,10 @@
         </div>
 
     </div>
+
+
+
+
     <!----------------------footer------------------------------------->
     <section class="footer">
         <div id="container">
@@ -93,8 +97,8 @@
 
             </div>
 
-
         </div>
+
         <div class="copyright">
             <hr>
             <p>Copyright&copy2023@EmejenDev.Traveller,.LTD. All Rights Reserved</p>
@@ -102,6 +106,7 @@
 
 
     </section>
+
 
 
 
