--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="w3-display-container mySlides">
                 <img src="images/d3.jpg" style="width:100%;  height: 450px;">
                 <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
-                    Beautiful Hills
+                    Beautiful Sunset
                 </div>
             </div>
 
@@ -161,7 +161,7 @@
                     <tr>
                         <td>5</td>
                         <td>6</td>
-                        <td style="background-color:  #1aff1a; width: 6px; height: 7px; border-radius: 50%;">7</td>
+                        <td>7</td>
                         <td>8</td>
                         <td>9</td>
                         <td>10</td>
@@ -181,7 +181,7 @@
                     <tr>
                         <td>19</td>
                         <td>20</td>
-                        <td>21</td>
+                        <td style="background-color:  #1aff1a; width: 6px; height: 7px; border-radius: 50%;">21</td>
                         <td>22</td>
                         <td>23</td>
                         <td>24</td>
