changes made on the about page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <section class="flip">
         <div class="flip-box">
             <div id="flipfront">
+                <h4 style="font-size: 1em;">Click here<i class="fa fa-arrow-down" aria-hidden="true"></i></h4>
                 <h5>For The First Time?</h5>
                 <h4>Welcome &#128525</h4>
             </div>
