--- a/about2.html
+++ b/about2.html
@@ -29,7 +29,8 @@
             <img src="images/partner.jpg" alt="">
             <pre>We are your partner.
         We share your vision.
-    Make fantasies a reality.Go ahead!</pre>
+    Make fantasies a reality.
+    Go ahead!</pre>
         </div>
     </section>
 
