removed some codes

--- a/contact2.html
+++ b/contact2.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Traveller-Contact Us</title>
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
+    <title>Traveller-Contact Us</title>
+    <script type="text/javascript" src="main.js"></script>
+
 </head>
 
 <body style="background-color:  #bfbfbf;">
@@ -58,14 +60,14 @@
         <h4>Contact For Any Query</h4>
         <div id="form">
 
-            <form action="" class="form-grp">
+            <form class="form-grp">
 
 
                 <input type="text" placeholder="Your Name"> <br>
                 <input type="email" placeholder="Enter Your Email" required> <br>
                 <input type="text" placeholder="Subject"><br>
                 <textarea name="text" id="text" placeholder="Message" cols="30" rows="10"></textarea><br>
-                <input type="submit" name="submit" value="Send" class="submit" style="background-color: #994d00; width: 5em; padding-top: 2em; margin-left: 10em;"></input>
+                <input type="button" onclick="emejen()" value="Submit" class="submit" style="background-color: #994d00; width: 5em; padding-top: 2em; margin-left: 10em;"></input>
 
 
 
