--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
     <title>Traveller</title>
 
@@ -87,7 +88,7 @@
 
         </div>
     </section>
-    <!------------------------------Welcome flip box--------------------------------------->
+    <!------------------------------Welcome flip box-----------------------------
     <section class="flip">
         <div class="flip-box">
             <div id="flipfront">
@@ -101,7 +102,7 @@
             </div>
         </div>
 
-    </section>
+    </section>---------->
 
 
     <!--------------------ARTICLES-------------------------->
